Fix y axis on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,3 +4,8 @@
 @theme {
     --font-sans: "Montserrat", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+
+body {
+    background: #FAFCFF;
+}
